[workspace]
resolver = "2"

members = [
    "mehrac",
    "embassy/embassy-sync",
    "embassy/embassy-executor",
    "embassy/embassy-time",
    "embassy/embassy-stm32",
    "embassy/embassy-futures",
]

[profile.dev]
codegen-units = 1
debug = true
incremental = true
lto = true
opt-level = 's'
panic = "abort"
